--- a/style.css
+++ b/style.css
@@ -465,6 +465,7 @@ body {
         bottom: 0%;
         height: 15vh;
         align-items: center;
+        background-size: 100% 100%;
         background-image: url('https://virajagarwal1.github.io/Launch-_Countdown-_Timer-Viraj/pattern-hills.svg');
     }
     #fbLOGO {
